Local Resources and DropDown on MenuBar

--- a/src/main/webapp/WEB-INF/texts/messages.properties
+++ b/src/main/webapp/WEB-INF/texts/messages.properties
@@ -17,6 +17,9 @@ msg.user.updated.success = User successfully updated.
 msg.users.empty.list = No user found!
 msg.create.new.user = If you don't have an user, create a new one
 msg.email.password.invalid = Email or password incorrect
+msg.user.logoff = You are logged off successfully.
+
+change.password = Change Password
 
 #Generic
 new = New
